Create first pannel

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <main>    
         <div class="superga">
            <div class="shoes">
-               <img class="model" src="" alt="">
+               <img class="model" src="./img/01.png" alt="">
                <h3>Il nostro modello di punta</h3>
            </div>
         </div>
