Create all pannels

--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
 
 <body>
    <main>    
-        <div class="superga">
+        <div class="item superga">
            <div class="shoes">
                <img class="model" src="./img/01.png" alt="">
                <h3>Il nostro modello di punta</h3>
            </div>
         </div>
+
+        <div class="item stan-smith">
+            <div class="shoes">
+                <img class="model" src="./img/02.png" alt="">
+                <h3>Il nostro modello di punta</h3>
+            </div>
+         </div>
+
+         <div class="item convers">
+            <div class="shoes">
+                <img class="model" src="./img/03.png" alt="">
+                <h3>Il nostro modello di punta</h3>
+            </div>
+         </div>
 
    
    </main> 
