Complete All Pannels

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="">1</a></li>
+                <li><a href="">2</a></li>
+                <li><a href="">3</a></li>
+            </ul>   
+        </nav>
+    </header>
+
    <main>    
         <div class="item superga">
            <div class="shoes">
@@ -24,7 +35,7 @@
             </div>
          </div>
 
-         <div class="item convers">
+         <div class="item converse">
             <div class="shoes">
                 <img class="model" src="./img/03.png" alt="">
                 <h3>Il nostro modello di punta</h3>
