--- a/index.html
+++ b/index.html
@@ -9,40 +9,50 @@
 </head>
 
 <body>
-
+    <!-- Header -->
     <header>
+        <!-- Nav bar -->
         <nav>
             <ul>
-                <li><a href="">1</a></li>
-                <li><a href="">2</a></li>
-                <li><a href="">3</a></li>
+                <li><a href="#superga">1</a></li>
+                <li><a href="#stan-smith">2</a></li>
+                <li><a href="#converse">3</a></li>
             </ul>   
         </nav>
+        <!-- /Nav bar -->
     </header>
+    <!-- /Header -->
 
-   <main>    
-        <div class="item superga">
+    <!-- Main -->
+   <main>   
+        <!-- Pannel 1  -->
+        <div id="superga" class="item">
            <div class="shoes">
                <img class="model" src="./img/01.png" alt="">
                <h3>Il nostro modello di punta</h3>
            </div>
         </div>
+        <!-- /Pannel 1  -->
 
-        <div class="item stan-smith">
+        <!-- Pannel 2 -->
+        <div id="stan-smith" class="item">
             <div class="shoes">
                 <img class="model" src="./img/02.png" alt="">
                 <h3>Il nostro modello di punta</h3>
             </div>
          </div>
+        <!-- /Pannel 2 -->
 
-         <div class="item converse">
+        <!-- Pannel 3 -->
+        <div id="converse" class="item">
             <div class="shoes">
                 <img class="model" src="./img/03.png" alt="">
                 <h3>Il nostro modello di punta</h3>
             </div>
-         </div>
+        </div>
+        <!-- /Pannel 3 -->
 
-   
    </main> 
+   <!-- /Main -->
 </body>
 </html>
